--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <div id="tablaAlergenos"></div>
+    <mostro-solution url-css="luegolopongo" url-js="luegolopongo"></mostro-solution>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
